fixed scrollbar appearing moves content. because we deactivated overflow-y: scroll when improving scrolling performance on .rp-content-scrol

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -507,6 +507,7 @@ html {
   -webkit-transform: translateZ(0);
   -moz-transform: translateZ(0);
   transform: translateZ(0);
+  overflow-y: scroll;
 }
 #rp-dialog-anchor {
   position: fixed;
