--- a/public/stylesheets/less/rp-content.less
+++ b/public/stylesheets/less/rp-content.less
@@ -45,8 +45,9 @@ html {
 
 .rp-content-scroll {
     transform: translateZ(0);
-    // overflow-y: scroll;
+    overflow-y: scroll;
     // will-change: transform;
+
 }
 
 #rp-dialog-anchor {
